--- a/templates/spa_page_menu.haml
+++ b/templates/spa_page_menu.haml
@@ -95,7 +95,12 @@
       var shared = document.querySelector("#shared-modax");
       shared.disabled = startDisabled;
 
+      if (onSubmit == "None") {
+        onSubmit = undefined;
+      }
+      
       showModax(modax, href, onSubmit);
+
     } else {
       if (href) {
         fetchURL(href);
