--- a/templates/spa_page_menu.haml
+++ b/templates/spa_page_menu.haml
@@ -141,23 +141,42 @@
     }
   }
 
-%temba-content-menu(endpoint="{{request.path}}" -temba-menu-clicked="handleContentMenuClicked(event)" -temba-script-triggered="handleScriptTriggered(event)")%
+  function handleContentMenuSelected(event) {
+    var item = event.detail;
+    
+    if (item.type === 'link') {
+      gotoURL(item.url);
+    }
+  
+    if (item.type == 'modax') {
 
--if content_menu_buttons or content_menu_links
-  .flex.h-full.spa-gear-buttons
-    -for link in content_menu_buttons
-      %temba-button.ml-4(name="{{link.title|escapejs}}" onclick="handleMenuClicked(event)" class='{{ link|gear_link_classes }}' data-success-url='{{ link.success_url }}' data-href='{{link.href}}' data-modax='{{link.modax|escapejs}}' data-on-submit='{{link.on_submit|escapejs}}' data-disabled='{{link.disabled}}')
+      var modax = document.querySelector('temba-modax#shared-modax');
+      modax.endpoint = item.url;
+      modax.header = item.title;
+      modax.headers = { "Temba-Spa": "1"}
+      modax.disabled = item.disabled;
 
-    -if content_menu_links
-      %temba-dropdown.items-stretch.flex.flex-column(arrowoffset="-12" offsetx="24" offsety="6" arrowsize="8")
-        .menu-button.items-center.flex.flex-column.py-2.px-2.ml-2(slot="toggle")
-          %temba-icon( name="icon.menu" size="1.5")
-        .dropdown.px-6.py-4.text-gray-800.z-50(slot="dropdown" style="min-width:200px")
-          -for link in content_menu_links
-            -if link.divider
-              .border-b.border-gray-200.my-4.-mx-6
-            .whitespace-nowrap.menu-item.hover-linked.font-normal{onclick:'handleMenuClicked(event)', class:'{{ link|gear_link_classes }}', data-success-url:'{{ link.success_url }}', data-href:'{{link.href}}', data-modax: '{{link.modax|escapejs}}', data-on-submit:'{{link.on_submit|escapejs}}', data-disabled:'{{link.disabled}}'}
-              {{link.title}}
-              %span{class:'gear-flag'}
-                {{link.flag}}h
+      modax.addEventListener('temba-submitted', function(){});
 
+      // modax.onsubmit = item.on_submit; //todo
+      modax.open = true;
+    }
+
+    if (item.type === 'url_post') {
+      // todo confirm this is right
+      var payload = '';
+      var headers = {};
+      var contentType = null;
+
+      var store = document.querySelector("temba-store");
+      store.postUrl(item.url, payload, headers, contentType)
+        .then((response) => {
+          console.log('response', response);
+        })
+        .catch((error) => {
+          console.error('error', error);
+        });
+    }
+  }
+
+%temba-content-menu(endpoint="{{request.path}}" -temba-selection="handleContentMenuSelected(event)" -temba-script-triggered="handleScriptTriggered(event)")%
