--- a/static/less/style.less
+++ b/static/less/style.less
@@ -258,3 +258,8 @@ ol.steps li {
   margin-left: 20px;
   padding: 5px;
 }
+
+temba-icon[name="log"]:hover {
+  color: var(--color-primary-dark);
+  cursor:pointer;
+}
