--- a/templates/msgs/message_box.haml
+++ b/templates/msgs/message_box.haml
@@ -159,7 +159,7 @@
                               {% attachment_button attachment %}
 
                       %td
-                        .flex.w-full.items-end.justify-end.pr-4
+                        .flex.w-full.items-end.justify-end.pr-4.items-center
                           .time.whitespace-nowrap
                             -block message_time
                               {% short_datetime object.created_on %}
