--- a/templates/spa_page_menu.haml
+++ b/templates/spa_page_menu.haml
@@ -123,6 +123,8 @@
           console.error('error', error);
         });
     }
+
+    refreshMenu();
   }
 
 %temba-content-menu(endpoint="{{request.path}}" -temba-selection="handleContentMenuSelected(event)")%
