Fix content menu display issues

--- a/templates/gear_links_include.haml
+++ b/templates/gear_links_include.haml
@@ -31,7 +31,7 @@
             {{link.title}}
 
       -if content_menu_links
-        %temba-dropdown.items-stretch.flex.flex-column(arrowoffset="-12" offsetx="3" offsety="6" arrowsize="8")
+        %temba-dropdown.items-stretch.flex.flex-column(arrowoffset="-10" arrowsize="8" drop_align="right")
           .menu-button.items-center.flex.flex-column.py-2.px-2.ml-2.rounded-lg(slot="toggle")
             %temba-icon(name="icon.menu" size="1.5")
           .dropdown.px-6.py-4.text-gray-800.z-50(slot="dropdown" style="min-width:200px")
