--- a/templates/spa_page_menu.haml
+++ b/templates/spa_page_menu.haml
@@ -128,7 +128,7 @@
       %temba-button.ml-4(name="{{link.title|escapejs}}" onclick="handleMenuClicked(event)" class='{{ link|gear_link_classes }}' data-success-url='{{ link.success_url }}' data-href='{{link.href}}' data-modax='{{link.modax|escapejs}}' data-on-submit='{{link.on_submit|escapejs}}' data-disabled='{{link.disabled}}')
 
     -if content_menu_links
-      %temba-dropdown.items-stretch.flex.flex-column(arrowoffset="-12" offsetx="24" offsety="6" arrowsize="8")
+      %temba-dropdown.items-stretch.flex.flex-column(arrowoffset="-10" arrowsize="8" drop_align="right")
         .menu-button.items-center.flex.flex-column.py-2.px-2.ml-2(slot="toggle")
           %temba-icon( name="icon.menu" size="1.5")
         .dropdown.px-6.py-4.text-gray-800.z-50(slot="dropdown" style="min-width:200px")
