--- a/templates/msgs/message_box.haml
+++ b/templates/msgs/message_box.haml
@@ -101,19 +101,18 @@
                           -trans "Resend"
 
                       - if 'label' in actions
-                        .btn-group
-                          .button-action.dropdown-toggle{data-toggle:"dropdown"}
+                        
+                        %temba-dropdown.items-stretch.flex.flex-column(arrowoffset="14" offsetx="6" offsety="10" arrowsize="8")
+                          .button-action(slot="toggle")
                             .-mt-1.mr-2.glyph.icon-tag{style:"width:16px"}
                             -trans "Label"
-
-                          %ul.dropdown-menu.label-menu.rounded-lg.border-none.px-4.py-3
+                          .rounded-lg.border-none.px-4.py-3(slot="dropdown" style="min-width:200px")
                             -for label in labels
-                              %li
-                                .lbl-menu(href='#' onclick='labelObjectRows({{label.id}}, false, wireTableListeners)' data-id='{{label.id}}')
-                                  .flex.items-center.py-1.hover-linked
-                                    .glyph.message-label.label-checkbox
-                                    .name.px-1
-                                      {{ label.name }}
+                              .lbl-menu(href='#' onclick='labelObjectRows({{label.id}}, false, wireTableListeners)' data-id='{{label.id}}')
+                                .flex.items-center.py-1.hover-linked
+                                  .glyph.message-label.label-checkbox
+                                  .name.px-1
+                                    {{ label.name }}
 
                             -if org_perms.msgs.label_create
                               -if labels
