some cleanup and test fixes (and package updates?)
- removed obsolete "edit workspace" test
- updated assertContentMenu to check for has_content_menu if spa=True
- added has_content_menu to ContentMenuMixin get_context_data fn
- replaced check for content_menu_buttons and content_menu_links with check for has_content_menu in both spa.haml and spa_page_header.haml
- removed extra css and js from spa_page_menu.haml
- pack-lock.json and yarn.lock updates

--- a/templates/spa.haml
+++ b/templates/spa.haml
@@ -28,7 +28,7 @@
 
 -block page-header
 
-  -if title or content_menu_buttons or content_menu_links
+  -if title or has_content_menu
     .spa-title.no-menu.flex.items-center.mb-4
       .text-container.text-2xl.text-gray-700
         .flex.flex-row
@@ -38,7 +38,7 @@
       .line.flex-grow.mr-2.ml-6
         .h-0.border.border-gray-200
       
-      -if content_menu_buttons or content_menu_links
+      -if has_content_menu
         .over-everything(style="z-index:9000")
           -include "spa_page_menu.haml"
 
