Add back the bootstrap tabs support

--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -80,6 +80,7 @@
         var static_url = '{{STATIC_URL}}';
 
       %script{src:"{{ STATIC_URL }}js/libs/jquery.url.js"}
+      %script{src:"{{ STATIC_URL }}bower/bootstrap/js/bootstrap-tab.js"}
 
       // expanded nav dropdown
       %script{src:"{{ STATIC_URL }}bower/jquery-hoverintent/jquery.hoverIntent.js"}
