--- a/templates/flows/flow_results.haml
+++ b/templates/flows/flow_results.haml
@@ -601,29 +601,16 @@
     .p-6
       -trans "Deleting this run will remove it from your flow's results. While the messages for the contact will remain, any record of this flow run will be gone forever."
 
-  .bg-white.p-4.rounded-lg
-    %ul.nav.nav-tabs.mb-0
-      %li.active
-        %a(href="#overview" data-toggle="tab")
-          -trans "Overview"
-
-      %li
-        %a(href="#analytics" data-toggle="tab")
-          -trans "Analytics"
-
-      %li
-        %a(href="#runs" data-toggle="tab" onclick="updateColumnSelect();")
-          -trans "Runs"
-
-    .tab-content
-      #overview.tab-pane.active.py-4
+  %temba-tabs.flex-grow
+    %temba-tab(name='{{_("Overview")|escapejs}}')
+      #overview.active.py-4.flex.flex-wrap.overflow-y-scroll.overflow-x-hidden
         .text-center{ic-get-from:'/flow/activity_chart/{{object.id}}', ic-trigger-on:'load'}
           %i.fa.fa-spinner.fa-spin.fa-2x
 
-      #analytics.tab-pane
-        #category-charts
+    %temba-tab(name='{{_("Analytics")|escapejs}}' icon="bar-chart")
+      #category-charts.flex.flex-wrap.overflow-y-scroll.overflow-x-hidden
 
-      #runs.tab-pane
+    %temba-tab(name='{{_("Runs")|escapejs}}')
         .scroll-x
           .responded-checkbox.flex.items-center.py-3.w-full
             .runs-show#show-all-runs{
