--- a/templates/flows/flow_results_spa.haml
+++ b/templates/flows/flow_results_spa.haml
@@ -369,7 +369,7 @@
     %temba-tab(name='{{_("Overview")|escapejs}}')
       #overview-charts.flex.flex-wrap.overflow-y-scroll.overflow-x-hidden
 
-    %temba-tab(name='{{_("Analytics")|escapejs}}' icon="bar-chart")
+    %temba-tab(name='{{_("Analytics")|escapejs}}' icon="icon.analytics")
       #category-charts.flex.flex-wrap.overflow-y-scroll.overflow-x-hidden
 
     %temba-tab(name='{{_("Runs")|escapejs}}')
