some updates based on the upcoming swap out of the gear links menu for the new content menu
- commented out the ~15 files containing the line `-include "gear_links_include.haml"` and added the line `-include "spa_page_menu.haml"` directly underneath it --> to compensate for the fact that for some old ui pages there's no longer any context_menu_buttons and context_menu_links context vars to refer to
- added a showModax() fn to spa_page_menu.haml --> to compensate for the fact that for the old ui pages there's no longer a gear_links_include.haml showModax() fn to refer to AND there's no spa_frame.haml parent page to refer to the showModax() fn that lives in the script on that page
- added a refreshMenu() fn to spa_page_menu.haml --> to compensate for the fact that for the old ui pages there's no spa_frame.haml parent page to refer to the refreshMenu() fn that lives in the script on that page

- failed unit test fixes and updates in progress

--- a/templates/contacts/contact_list.haml
+++ b/templates/contacts/contact_list.haml
@@ -201,7 +201,8 @@
                           -else
                             {{title}}
                   .gear-links
-                    -include "gear_links_include.haml"
+                    {% comment %} -include "gear_links_include.haml" {% endcomment %}
+                    -include "spa_page_menu.haml"
                 .subtitle.ml-1.w-full
                   -block subtitle
 
