--- a/templates/msgs/msg_filter.haml
+++ b/templates/msgs/msg_filter.haml
@@ -11,7 +11,8 @@
 
 -block buttons-right
   -block gear-menu
-    -include "gear_links_include.haml"
+    {% comment %} -include "gear_links_include.haml" {% endcomment %}
+    -include "spa_page_menu.haml"
 
 -block post-content
   {{ block.super }}
