--- a/templates/msgs/msg_test_frame.haml
+++ b/templates/msgs/msg_test_frame.haml
@@ -30,7 +30,8 @@
 
                 -block above-bar
                   -block gear-menu
-                    -include "gear_links_include.haml"
+                    {% comment %} -include "gear_links_include.haml" {% endcomment %}
+                    -include "spa_page_menu.haml"
                   -block top-form
 
           %hr.top-bar
