--- a/templates/flows/flow_editor.haml
+++ b/templates/flows/flow_editor.haml
@@ -299,7 +299,8 @@
             .ml-0
               {{title}}
         .menu
-          -include "gear_links_include.haml"
+          {% comment %} -include "gear_links_include.haml" {% endcomment %}
+          -include "spa_page_menu.haml"
 
       -if is_starting
         .p-3.bg-gray-100.w-full.text-center
