--- a/templates/orgs/org_workspace.haml
+++ b/templates/orgs/org_workspace.haml
@@ -14,7 +14,8 @@
   .pull-right
     -block buttons-right
       -block gear-menu
-        -include "gear_links_include.haml"
+        {% comment %} -include "gear_links_include.haml" {% endcomment %}
+        -include "spa_page_menu.haml"
 
 -block content
   -for channel in channels
