--- a/templates/triggers/trigger_list.haml
+++ b/templates/triggers/trigger_list.haml
@@ -62,7 +62,8 @@
                 .page-title.leading-tight
                   {{title}}
             .gear-links
-              -include "gear_links_include.haml"
+              {% comment %} -include "gear_links_include.haml" {% endcomment %}
+              -include "spa_page_menu.haml"
 
           %form#search-form.mb-4(method="get")
             %temba-textinput(type='text' placeholder='{% trans "Search" %}' name="search" value="{{search}}")
