--- a/templates/spa_frame.haml
+++ b/templates/spa_frame.haml
@@ -279,8 +279,8 @@
 -block full-page-script
 
   %script(src="{{ STATIC_URL }}js/labels.js")
-  %script(src="{{ STATIC_URL }}highcharts/js/highcharts.js")
-  %script(src="{{ STATIC_URL }}highcharts/js/modules/drilldown.js")
+  %script(src="{{ STATIC_URL }}highcharts/highcharts.js")
+  %script(src="{{ STATIC_URL }}highcharts/modules/drilldown.js")
   %script(src="{{ STATIC_URL }}qrious/dist/qrious.min.js")
 
   -for script in scripts
