some logic and testing updates
- fixed old vs. new ui tests, which fixed ~10 tests
- fixed tests failing due to some classes not having the SpaMixin, which fixed another ~7-8 tests
- added back is_spa param to assertContentMenu... unit test fns, which fixed another ~4-5 tests
- added is_legacy to context based on whether the page is_spa or not so as to initialize the temba-content-menu to indicate whether the component should fetch the legacy vs. spa content menu items

--- a/templates/frame.haml
+++ b/templates/frame.haml
@@ -240,7 +240,8 @@
                 .flex-grow
                   .flex.justify-end.w-full
                     -block gear-menu
-                      -include "spa_page_menu.haml"
+                      -if has_content_menu  
+                        -include "spa_page_menu.haml"
 
               -block post-title
 
