--- a/templates/spa_page_menu.haml
+++ b/templates/spa_page_menu.haml
@@ -1,6 +1,7 @@
 -load public
 
-%temba-content-menu(endpoint="{{request.path}}" -temba-selection="handleContentMenuSelected(event)")%
+%p endpoint="{{request.path}}" legacy="{{is_legacy}}"
+%temba-content-menu(endpoint="{{request.path}}" legacy="{{is_legacy}}" -temba-selection="handleContentMenuSelected(event)")
 
 :javascript
 
