minor fixes and updates
- reordered context params in get_context_data
- simplified is_legacy logic in get_context_data
- removed onsubmit handler and handleSearchSubmitted fn from contact_list_spa
- added onsubmit handler and handleSearchSubmitted fn to spa_page_menu

--- a/templates/spa_page_menu.haml
+++ b/templates/spa_page_menu.haml
@@ -72,3 +72,17 @@
       menu.refresh();
     }
   }
+
+  function handleSearchSubmitted(event){
+    //update the content menu query with the search form input value
+    var contentMenu = document.querySelector("temba-content-menu");
+    var formData = new FormData(event.target);
+    let search = new URLSearchParams(formData).toString();
+    console.log('handleSearchSubmitted search', search);
+    contentMenu.query = search;
+  }
+
+  $(function(){
+    var searchForm = document.querySelector("#search-form :has(temba-textinput[name='search'])");
+    searchForm.addEventListener('submit', handleSearchSubmitted);
+  });
