--- a/templates/contacts/contact_list_spa.haml
+++ b/templates/contacts/contact_list_spa.haml
@@ -23,7 +23,7 @@
   .flex
     .flex-grow.self-end.items-end
       .flex.flex-col
-        %form#search-form(method="get" onSubmit="handleSearchSubmitted(event)")
+        %form#search-form(method="get")
           %temba-textinput.w-full(placeholder='{% trans "Search" %}' name="search" value="{{search}}")
           %input.hide(type="submit")
 
@@ -165,17 +165,4 @@
                 -if field.show_in_table
                   %td.field
               %td
-
--block extra-script
-  {{ block.super }}
-
-  :javascript
-
-    function handleSearchSubmitted(event){
-      //update the content menu query with the search form input value
-      var contentMenu = document.querySelector("temba-content-menu");
-      var formData = new FormData(event.target);
-      let search = new URLSearchParams(formData).toString();
-      console.log('handleSearchSubmitted search', search);
-      contentMenu.query = search;
-    }
+              
