Increase max-width for channel configuration page

--- a/templates/channels/channel_configuration.haml
+++ b/templates/channels/channel_configuration.haml
@@ -45,3 +45,9 @@
     $(function(){
       prettyPrint();
     });
+
+-block extra-style
+  :css
+    .page-content {
+      max-width: 1024px;
+    }
