Allow channel configuration URLs to wrap the space

--- a/templates/channels/channel_configuration.haml
+++ b/templates/channels/channel_configuration.haml
@@ -22,7 +22,7 @@
     .card.mt-6.flex-shrink-0
       .title
         {{url.label}}
-      .code.inline-block.mt-3
+      .code.inline-block.mt-3.whitespace-normal
         {{url.url}}       
 
       .my-4
@@ -45,9 +45,3 @@
     $(function(){
       prettyPrint();
     });
-
--block extra-style
-  :css
-    .page-content {
-      max-width: 1024px;
-    }
