--- a/templates/flows/flow_editor.haml
+++ b/templates/flows/flow_editor.haml
@@ -276,7 +276,8 @@
     }
 
 -block page-container
-
+  %temba-modax#shared-modax
+  %temba-dialog#shared-dialog
   %temba-modax#send-message-modal{ header:"Send Message" }
 
   .top-bar.pb-2
